--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,10 +1,14 @@
 <div>
-  <h4 [ngClass]="{'todo-title--done': todo.isDone}">{{todo.title | uppercase}}</h4>
+  <h4 [ngClass]="{'todo-title--done': todo.isDone, 'title':true}"
+    (click) = "handleClickOnTitle(todo)"
+  >{{todo.title | uppercase}}</h4>
   <div>
     <input type="checkbox" id="todo_done" name="todo_done" 
       [checked]="todo.isDone"
       (change) = "handleCheckBoxChange(todo)"
     />
   </div>
-
+  <button
+    (click) = "handleDeleteTodo(todo)"
+  >Delete</button>
 </div>
